classDiagram
    class User {
        +uuid id
        +UserRole role
        +Date dateOfBirth
        +Sex sex
        +string race
        +Date createdAt
        +Measurement[] measurements
        +Alert[] alerts
    }

    class Measurement {
        +uuid id
        +MeasurementType measurementType
        +float value
        +Date measuredAt
        +uuid userId
        +Date createdAt
        +User user
    }

    class Alert {
        +uuid id
        +AlertType type
        +AlertImportance importance
        +boolean resolved
        +uuid userId
        +Date createdAt
        +Date updatedAt
        +User user
        +shouldTriggerAltAlert(value, sex)$ boolean
        +shouldTriggerFibrosisAlert(value)$ boolean
        +findAlarmingPairs(measurements, user)$ AlarmingPair[]
        +findValidConsecutivePairs(pairs, count)$ AlarmingPair[]
        +calculateLiverCancerRisk(pairs, user)$ number
        +shouldRaiseBigAlert(riskLevel)$ boolean
    }

    class AlarmingPair {
        <<interface>>
        +Measurement alt
        +Measurement fibrosis
        +Date date
    }

    class UserRole {
        <<enumeration>>
        PATIENT
        MEDICAL_DOCTOR
    }

    class Sex {
        <<enumeration>>
        MALE
        FEMALE
    }

    class MeasurementType {
        <<enumeration>>
        ALT
        FIBROSIS
    }

    class AlertType {
        <<enumeration>>
        SMALL
        BIG
    }

    class AlertImportance {
        <<enumeration>>
        LOW
        MEDIUM
        HIGH
        CRITICAL
    }

    User "1" --o "0..*" Measurement : has
    User "1" --o "0..*" Alert : has
    Alert ..> Measurement : evaluates
    Alert ..> User : uses for calculation
    Alert ..> AlarmingPair : returns

    User --> UserRole : uses
    User --> Sex : uses
    Measurement --> MeasurementType : uses
    Alert --> AlertType : uses
    Alert --> AlertImportance : uses
    AlarmingPair --> Measurement : contains
